# human_randgen

./: .gitignore  LICENSE  README.md  pyproject.toml
src/human_randgen/: model.py
tests/: test_model.py
