[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "human_randgen"
version = "0.0.1"
authors = [
  { name="rzqx", email="rzqx@pm.me" },
]
description = "A random generator for simulating human response times"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rzqx/human_randgen"
"Bug Tracker" = "https://github.com/rzqx/human_randgen/issues"
